Create new Service project and refactor code so it works with it

--- a/SportsBetting.BackofficeApi/SportsBetting.BackofficeApi.csproj
+++ b/SportsBetting.BackofficeApi/SportsBetting.BackofficeApi.csproj
@@ -25,6 +25,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\SportsBetting.Data\SportsBetting.Data.csproj" />
+    <ProjectReference Include="..\SportsBetting.Services\SportsBetting.Services.csproj" />
   </ItemGroup>
 
 </Project>
