Implement user creation and login

--- a/SportsBetting.BackofficeApi/appsettings.Development.json
+++ b/SportsBetting.BackofficeApi/appsettings.Development.json
@@ -12,5 +12,9 @@
 
   "Redis": {
     "ConnectionString": "localhost:6379"
+  },
+
+  "AppSettings": {
+    "Token": "secretsecretsecretsecretsecretsecret"
   }
 }
