Implement logging on backoffice api

--- a/SportsBetting.BackofficeApi/appsettings.Development.json
+++ b/SportsBetting.BackofficeApi/appsettings.Development.json
@@ -16,5 +16,29 @@
 
   "AppSettings": {
     "Token": "secretsecretsecretsecretsecretsecret"
+  },
+
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [
+      { "Name": "Console" },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "Logs/log-.json",
+          "rollingInterval": "Day"
+        }
+      }
+    ],
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ],
+    "Properties": {
+      "Application": "YourApplicationName"
+    }
   }
 }
