--- a/SportsBetting.BackofficeApi/appsettings.Development.json
+++ b/SportsBetting.BackofficeApi/appsettings.Development.json
@@ -22,8 +22,8 @@
     "MinimumLevel": {
       "Default": "Information",
       "Override": {
-        "Microsoft": "Warning",
-        "System": "Warning"
+        "Microsoft": "Information",
+        "System": "Information"
       }
     },
     "WriteTo": [
